Mise en place du Esay Admin Bundle pour le dashboard + redirection après le login

--- a/templates/admin/security/login.html.twig
+++ b/templates/admin/security/login.html.twig
@@ -1,6 +1,6 @@
-{% extends 'security/base.html.twig' %}
+{% extends 'admin/security/base.html.twig' %}
 
-{% block title %}Login{% endblock %}
+{% block title %}Eternal Devops - Administration{% endblock %}
 
 {% block body %}
 <form method="post">
